syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

package org.grpc_learning;

message CreateTodoItemRequest {

	string name = 1;
	string description = 2;

}

enum TodoItemStatus {

	Performing = 0;
	Performed = 1;
	Rejected = 2;
}

message TodoItemDto {

	uint64 id = 1;
	string name = 2;
	string description = 3;
	TodoItemStatus status = 4;
	google.protobuf.Timestamp performedAt = 5;
}

message CreateTodoItemResponse {

	TodoItemDto createdTodoItem = 1;
	google.protobuf.Timestamp createdAt = 2;
}

service TodoItemService {

	rpc createTodoItem(CreateTodoItemRequest) returns (CreateTodoItemResponse);
}